--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,13 @@
 	<li><%= t('.location', :location => @user.location) %></li>
 	<li><%= t('.bio', :bio => @user.bio) %></li>
 </ul>
+
+<% @rooms.each do |room| %>
+
+<%= render(partial: "rooms/room", locals: {room: room}) %>
+
+<% end %>
+</br>
+
 <%= link_to t('.edit'), edit_user_path(@user) %>
+
